cabal-version:       2.2
name:                editor-two
version:             0.1.0.0
license:             BSD-3-Clause
license-file:        LICENSE
author:              Brad Parker
maintainer:          hi@bradparker.com
build-type:          Simple

executable editor-two
  main-is:
    Main.hs
  build-depends:
      base >=4.11 && <4.13
    , rasa
    , rasa-ext-cursors
    , rasa-ext-files
    , rasa-ext-logger
    , rasa-ext-slate
    , rasa-ext-views
    , rasa-ext-vim
  hs-source-dirs:
    src
  default-language:
    Haskell2010
  ghc-options:
    -Wall -threaded -rtsopts -with-rtsopts=-N
